[gd_scene load_steps=4 format=3 uid="uid://s6mk8i1l4u0t"]

[ext_resource type="Script" path="res://addons/smart_line_edit/smart_line_edit.gd" id="1_nxr81"]
[ext_resource type="Texture2D" uid="uid://diluf143a65a2" path="res://addons/smart_line_edit/Check.svg" id="2_trcu3"]
[ext_resource type="Texture2D" uid="uid://d1kx0svywrwxq" path="res://addons/smart_line_edit/Folder.svg" id="3_4uo8e"]

[node name="SmartLineEdit" type="HBoxContainer"]
offset_right = 228.0
offset_bottom = 24.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_nxr81")
expression_input_names = PackedStringArray()
last_valid_text = "1"

[node name="LineEdit" type="LineEdit" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 4
auto_translate = false
tooltip_text = "Enter your input.
Input is valid."
focus_neighbor_right = NodePath("../OpenFileDialog")
focus_next = NodePath("../OpenFileDialog")
theme_type_variation = &"LineEdit_OK"
text = "1"
expand_to_text_length = true

[node name="OpenFileDialog" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
tooltip_text = "Open file explorer"
focus_neighbor_left = NodePath("../LineEdit")
focus_neighbor_right = NodePath("../Submit")
focus_next = NodePath("../Submit")
focus_previous = NodePath("../LineEdit")
icon = ExtResource("3_4uo8e")

[node name="Submit" type="Button" parent="."]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
auto_translate = false
tooltip_text = "Submit your input."
focus_neighbor_left = NodePath("../OpenFileDialog")
focus_previous = NodePath("../OpenFileDialog")
icon = ExtResource("2_trcu3")

[connection signal="status_changed" from="." to="." method="_on_status_changed"]
[connection signal="valid_text_changed" from="." to="." method="_on_valid_text_changed"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="OpenFileDialog" to="." method="open_file_dialog"]
[connection signal="pressed" from="Submit" to="." method="_on_submit_pressed"]
